Add status page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/grids-responsive-min.css" />
     <link rel="stylesheet" type="text/css" href="static/styles/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Lobster" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Lobster|Russo+One" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css" integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous" />
     <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
@@ -40,14 +40,10 @@
         <div class="pure-g">
             <div id="result-container" class="pure-u-1">
                 <p>
-                    Currently Serving<br />
-                    <span id="year-count"></span>
-                    <br />
-                    <span id="league-count"></span>
-                    <br />
-                    <span id="tournament-count"></span>
-                </p>
-
+                <h1 class="content" id="scores-count"></h3>
+                <h1 class="content" id="tournament-count"></h3>
+                <h1 class="content" id="year-count"></h3>
+                <h1 class="content" id="league-count"></h3>
             </div>
         </div>
     </div>
