fix responsive small screen

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
     <div class="menu">
         <div class="pure-g">
-            <div id="year-container" class="pure-u-sm-1 pure-u-md-1-2">
+            <div id="year-container" class="pure-u-1 pure-u-md-1-2">
                 <h3>Years</h3>
             </div>
-            <div id="league-container" class="pure-u-sm-1 pure-u-md-1-2">
+            <div id="league-container" class="pure-u-1 pure-u-md-1-2">
                 <h3>Leagues</h3>
             </div>
 
