WiP: event display function

--- a/events.html
+++ b/events.html
@@ -21,4 +21,10 @@
       <a href="/events.html" class="button">Events</a>
       <a href="https://github.com/swysocki/classicscores" class="button">Contact</a>
     </header>
+    <div class="content">
+      <div id="event-container" class="pure-u-1">
+
+      </div>
+    </div>
+  </body>
 </html>
