--- a/events.html
+++ b/events.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Classic Scores</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-nord.min.css"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
-    <script
-      type="text/javascript"
-      src="/static/scripts/events.js"
-    ></script>
-  </head>
 
-  <body>
-    <header>
-      <a href="/" class="logo">ClassicScores</a>
-      <a href="/events.html" class="button">Events</a>
-      <a href="https://github.com/swysocki/classicscores" class="button">Contact</a>
-    </header>
+<head>
+  <meta charset="utf-8" />
+  <title>Classic Scores</title>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-nord.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
+  <script type="text/javascript" src="/static/scripts/events.js"></script>
+</head>
+
+<body>
+  <header>
+    <a href="/" class="logo">ClassicScores</a>
+    <a href="/events.html" class="button">Events</a>
+    <a href="https://github.com/swysocki/classicscores" class="button">Contact</a>
+  </header>
+  <div class="container">
     <div class="content">
-      <div id="event-container" class="pure-u-1">
+      <div id="event-container">
 
       </div>
     </div>
-  </body>
+  </div>
+
+</body>
+
 </html>
