--- a/index.html
+++ b/index.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Classic Scores</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-nord.min.css"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
-    <script
-      type="text/javascript"
-      src="/static/scripts/tournaments.js"
-    ></script>
-  </head>
 
-  <body>
-    <header>
-      <a href="/" class="logo">ClassicScores</a>
-      <a href="https://github.com/swysocki/classicscores" class="button">Contact</a>
-    </header>
-    <div class="container">
-      <div class="row">
-        <div id="year-container" class="col-sm-6">
-          <h3>Years</h3>
-        </div>
-        <div id="league-container" class="col-sm-6">
-          <h3>Leagues</h3>
-        </div>
-      </div>
-      <div class="content">
-        <div id="result-container" class="pure-u-1">
-        </div>
-      </div>
-    </div>
-    <footer>
-      <p id="stats"></p>
-    </footer>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Classic Scores</title>
+  <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
+  <script type="text/javascript" src="/static/scripts/tournaments.js"></script>
+</head>
+
+<body>
+  <header>
+    <h1><a href="/">ClassicScores</a></h1>
+  </header>
+  <div id="year-container" class="pure-u-md-1-3 pure-u-sm-1">
+    <h3>Years</h3>
+  </div>
+  <div id="league-container" class="pure-u-md-1-3 pure-u-sm-1">
+    <h3>Leagues</h3>
+  </div>
+  <div id="result-container">
+  </div>
+  <footer>
+    <p id="stats"></p>
+  </footer>
+</body>
+
 </html>
