--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta charset="utf-8" />
   <title>Classic Scores</title>
   <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
+  <style type="text/css">
+    body {
+      margin: 40px auto;
+      max-width: 650px;
+      line-height: 1.6;
+      font-size: 18px;
+      color: #444;
+      padding: 0 10px
+    }
+
+    h1,
+    h2,
+    h3 {
+      line-height: 1.2
+    }
+  </style>
   <script type="text/javascript" src="/static/scripts/tournaments.js"></script>
 </head>
 
