--- a/events.html
+++ b/events.html
@@ -3,27 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Classic Scores</title>
-  <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-nord.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Classic Events</title>
   <link rel="prefetch" href="/static/data/tournament_data.json" as="fetch" />
+  <link rel="stylesheet" href="/static/styles/main.css">
   <script type="text/javascript" src="/static/scripts/events.js"></script>
 </head>
 
 <body>
   <header>
-    <a href="/" class="logo">ClassicScores</a>
-    <a href="/events.html" class="button">Events</a>
-    <a href="https://github.com/swysocki/classicscores" class="button">Contact</a>
+    <h1><a href="/">ClassicEvents</a></h1>
   </header>
-  <div class="container">
-    <div class="content">
-      <div id="event-container">
-
-      </div>
-    </div>
+  <div id="event-container">
   </div>
-
 </body>
-
 </html>
