--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <header>
     <h1><a href="/">ClassicScores</a></h1>
   </header>
-  <div id="year-container" class="pure-u-md-1-3 pure-u-sm-1">
+  <div id="year-container">
     <h3>Years</h3>
   </div>
-  <div id="league-container" class="pure-u-md-1-3 pure-u-sm-1">
+  <div id="league-container">
     <h3>Leagues</h3>
   </div>
   <div id="result-container">
